# ros_deep_learning

./: CMakeLists.txt  README.md  package.xml  ros_deep_learning_nodelets.xml
config/: paths_detectnet.yaml  paths_imagenet.yaml
include/: ros_detectnet.h  ros_detectnet_monocular.h  ros_detectnet_rgbd.h
launch/: detectnet.launch  detectnet_zed.launch
src/: ros_detectnet.cpp  ros_detectnet_rgbd.cpp
